--- a/package.json
+++ b/package.json
@@ -1,12 +1,19 @@
 {
-  "name": "isnipe",
-  "version": "0.0.1",
-  "description": "A modular sniper",
-  "main": "src/isnipe.js",
-  "author": "ilexite",
-  "license": "GPL-3.0",
-  "private": false,
-  "dependencies": {
-    "ini": "^3.0.1"
-  }
+	"name": "isnipe",
+	"version": "0.0.1",
+	"description": "A modular sniper",
+	"main": "src/isnipe.js",
+	"author": "ilexite",
+	"license": "GPL-3.0",
+	"private": false,
+	"dependencies": {
+		"axios": "^1.1.2",
+		"erlpack": "^0.1.4",
+		"ini": "^3.0.1",
+		"ws": "^8.9.0"
+	},
+	"scripts": {
+		"start": "node src/isnipe.js"
+	},
+	"repository": "https://github.com/ilexite/isnipe.git"
 }
