--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
 	"private": false,
 	"dependencies": {
 		"axios": "^1.1.2",
+		"commander": "^9.4.1",
 		"erlpack": "^0.1.4",
 		"ini": "^3.0.1",
 		"ws": "^8.9.0"
